--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
-version: "3"
 services:
-  appserver:
-    container_name: server
-    image: danielgoldbergg/virtualshop:name-001
+  db:
+    image: postgres:15
+    container_name: postgres_db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
     ports:
-      - 8080:8080
+      - "5432:5432"
+
+  app:
+    image: danielgoldbergg/virtualshop:name-001
+    container_name: virtual_shop_app
     depends_on:
       - db
-  db:
-    image: postgres
-    environment:
-      POSTGRES_PASSWORD: postgres
     ports:
-      - 5432:5432
-    volumes:
-      - ./postgresdata:/var/lib/postgresql/
-    privileged: true
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/postgres
